# ostrea

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  requirements.txt
api/: Dockerfile  mydatabase_dump.sql  package-lock.json  package.json  server.js
app/: .dockerignore  Dockerfile  index.html  package.json  tsconfig.json
data_separated/: meta.json
database/: .gitignore  Dockerfile.init  Dockerfile.postgis-fedora  connectivity_to_db.py  geojson_to_db.py  metadata_to_db.py  metadata_viewer.py  parquet-viewer.py  pyproject.toml  requirements.txt
database/data/: connectivity_05m_00d-07d.pq  connectivity_10m_00d-07d.pq  connectivity_15m_00d-07d.pq  hex_label_to_id.json  hex_label_to_id.pkl  hexes.geojson  meta.json
database/data/source/: separate_geojson.ipynb
database/geojsons/: connectivity.json  test.geojson
database/init/: Dockerfile  init_db.py
database/old_data/: connectivity.json  test.geojson
database/src/hex_db_loader/: __init__.py  config.py  connectivity.py  geojson.py  metadata.py
docs/: image-building.md  kind-deployment-test.md  microshift-deployment-test.md  microshift-setup.md  oc-deploy.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
k8s/: api-deployment.yaml  db-deployment.yaml  db-init-job.yaml  db-pvc.yaml  db-secret.yaml  env-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  namespace.yaml  nginx-cm0-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  openshift-route.yaml
nginx/: default.conf  nginx.conf
plans/: cve-scan-00-findings.md  depth-habitable-00-plan.md  final-polish-00-plan.md  (+13 more)
(+75 files in other folders)
