[project]
authors = [{name = "Willi Rath", email = "wrath@geomar.de"}]
dependencies = []
name = "hex_db_loader"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
load-connectivity = "hex_db_loader.connectivity:main"
load-geojson = "hex_db_loader.geojson:main"
load-metadata = "hex_db_loader.metadata:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
hex_db_loader = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
geopandas = ">=1.1.2,<2"
pandas = ">=2.3.3,<3"
pyarrow = ">=22.0.0,<23"
pyyaml = ">=6.0.3,<7"
sqlalchemy = ">=2.0.45,<3"
tqdm = ">=4.67.1,<5"
pip = ">=25.3,<26"
psycopg2 = ">=2.9.11,<3"
geoalchemy2 = ">=0.18.1,<0.19"
